envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: client
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/auth"
                route:
                  cluster: chitchat-server
              - match:
                  prefix: "/channel"
                route:
                  upgrade_configs:
                  - upgrade_type: websocket
                  cluster: chitchat-server
              - match:
                  prefix: "/messages"
                route:
                  cluster: chitchat-server
              - match:
                  prefix: "/users"
                route:
                  cluster: chitchat-server
              - match:
                  prefix: "/"
                route:
                  cluster: chitchat-client
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: chitchat-client
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: client
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: client
                port_value: 3000
  - name: chitchat-server
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 4000
